Fix transparent gap between media players

--- a/ags/scss/modules/_media.scss
+++ b/ags/scss/modules/_media.scss
@@ -7,7 +7,7 @@
 
     .player {
         /* work around for block showing */
-        border-width: 0px 15px 15px 15px;
+        border-width: 0px 20px 20px 20px;
         border-color: $bg-dark;
         border-style: solid;
 
